crates/macros/tests/snapshots/authorization__configuration_id.snap
---
source: crates/macros/tests/authorization.rs
assertion_line: 31
expression: "&request"
---
credential_issuer: "http://vercre.io"
response_type: code
client_id: 96bfb9cb-0513-7d64-5532-bed74c48f9ab
redirect_uri: "http://localhost:3000/callback"
state: "1234"
code_challenge: ""
code_challenge_method: S256
authorization_details: "[{\"type\":\"openid_credential\",\"credential_configuration_id\":\"EmployeeID_JWT\"}]"
subject_id: normal_user
wallet_issuer: "http://vercre.io"
