crates/macros/tests/snapshots/authorization__scope.snap
---
source: crates/macros/tests/authorization.rs
assertion_line: 117
expression: "&request"
---
credential_issuer: "http://vercre.io"
response_type: code
client_id: 96bfb9cb-0513-7d64-5532-bed74c48f9ab
redirect_uri: "http://localhost:3000/callback"
state: "1234"
code_challenge: B6qi8EPWVTnONnO8XNSAsN7O2ejthn3pCKwZUO0HzU8
code_challenge_method: S256
scope: EmployeeIDCredential
subject_id: normal_user
wallet_issuer: "http://vercre.io"
